--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/managmentroles
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hhhh
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+Hibernate Propertieshe SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
+
 
